RbA Build/src/objects/Quote_Discount__c.object
<CustomObject>
    <description>Junction from the discount to the quote</description>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount in dollars discounted from the quote.</description>
        <inlineHelpText>The amount in dollars discounted from the quote.</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Description__c</fullName>
        <description>The description of the discount</description>
        <formula>Discount__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The description of the discount</inlineHelpText>
        <label>Discount Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>The discount linked to this discount applied junction.</description>
        <inlineHelpText>The discount linked to this discount applied junction.</inlineHelpText>
        <label>Discount</label>
        <referenceTo>Discount__c</referenceTo>
        <relationshipName>Quote_Discount_Applied</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <description>The discount is applied to this quote</description>
        <inlineHelpText>The discount is applied to this quote</inlineHelpText>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipName>Discount_Applied</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the quote discount.</description>
        <inlineHelpText>The status of the quote discount.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Applied</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Store_Location__c</fullName>
        <description>The discount&apos;s store location</description>
        <formula>Discount__r.Store_Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The discount&apos;s store location</inlineHelpText>
        <label>Store Location</label>
        <type>Text</type>
    </fields>
    <label>Quote Discount</label>
    <nameField>
        <displayFormat>OD-{00000000}</displayFormat>
        <label>Quote Discount Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>